--- a/Windows/EditActionButtonDialog.xaml
+++ b/Windows/EditActionButtonDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyJob.Windows"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
         Title="Edit button" Height="600" Width="400" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
