--- a/Windows/NewTabDialog.xaml
+++ b/Windows/NewTabDialog.xaml
@@ -7,7 +7,7 @@
         ui:WindowHelper.UseModernWindowStyle="True"
         xmlns:local="clr-namespace:EasyJob.Windows"
         mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Title="Create new Tab" Height="260" Width="400">
+        Title="Create new Tab" Height="260" Width="400" Icon="pack://application:,,,/Images/icon.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="90"/>
@@ -16,7 +16,7 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Padding="12" Grid.Row="0" Text="Crate new tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
+        <TextBlock Padding="12" Grid.Row="0" Text="Create new tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
         <Label Content="Please specify new tab name" Margin="8" Grid.Row="1"/>
         <TextBox x:Name="CreateNewTabTextBox" Grid.Row="2" Margin="10,10,10,10" Height="16"/>
         <Button Grid.Row="3" Content="Add" Margin="0,0,10,0" HorizontalAlignment="Right" Click="CreateNewTabButton_Click"/>
