--- a/Windows/AddActionButtonDialog.xaml
+++ b/Windows/AddActionButtonDialog.xaml
@@ -101,7 +101,7 @@
             <Button Grid.Row="1" Content="Add" Click="ADDButton_Click" Margin="10,0,0,0" Padding="5"/>
             <TextBox x:Name="ButtonScriptArgumentText" Grid.Row="2" Margin="55,6,10,6"/>
         </Grid>
-        <Button Grid.Row="13" Content="OK" Click="OKButton_Click" Margin="5" Padding="5" HorizontalAlignment="Right"/>
+        <Button Grid.Row="13" Content="OK" Click="OKButton_Click" Margin="5" Padding="5" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Right"/>
         <Button Grid.Row="13" Content="Cancel" Click="CANCELButton_Click" Margin="5,5,40,5" Padding="5" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
