--- a/Windows/NewTabDialog.xaml
+++ b/Windows/NewTabDialog.xaml
@@ -19,6 +19,7 @@
         <TextBlock Padding="12" Grid.Row="0" Text="Create new tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
         <Label Content="Please specify new tab name" Margin="8" Grid.Row="1"/>
         <TextBox x:Name="CreateNewTabTextBox" Grid.Row="2" Margin="10,10,10,10" Height="16"/>
-        <Button Grid.Row="3" Content="Add" Margin="0,0,10,0" HorizontalAlignment="Right" Click="CreateNewTabButton_Click"/>
+        <Button Grid.Row="3" Content="Add" Margin="0,0,10,0" HorizontalAlignment="Right" Style="{StaticResource AccentButtonStyle}" Click="CreateNewTabButton_Click"/>
+        <Button Grid.Row="13" Content="Cancel" Click="CancelButton_Click" Margin="5,5,60,5" Padding="5" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
