--- a/Windows/RenameTabDialog.xaml
+++ b/Windows/RenameTabDialog.xaml
@@ -19,7 +19,7 @@
         <TextBlock Padding="12" Grid.Row="0" Text="Rename current tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
         <Label Content="Please specify new tab name" Margin="8" Grid.Row="1"/>
         <TextBox x:Name="RenameTabTextBox" Grid.Row="2" Margin="10,10,10,10" Height="16"/>
-        <Button Grid.Row="3" Content="Rename" Margin="0,0,10,0" HorizontalAlignment="Right" Click="RenameTabButton_Click"/>
+        <Button Grid.Row="3" Content="Rename" Margin="0,0,10,0" HorizontalAlignment="Right" Style="{StaticResource AccentButtonStyle}" Click="RenameTabButton_Click"/>
         <Button Grid.Row="3" Content="Cancel" Margin="0,0,85,0" HorizontalAlignment="Right" Click="CancelRenameButton_Click"/>
     </Grid>
 </Window>
