--- a/EasyJob/MainWindow.xaml
+++ b/EasyJob/MainWindow.xaml
@@ -12,21 +12,7 @@
         mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
         Title="EasyJob Executor" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <ContextMenu x:Key="AddTabContextMenu">
-            <MenuItem Header="Add tab" Click="ContextMenuAddTab_Click">
-                <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/addtab.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="RemoveTabContextMenu">
-            <MenuItem Header="Remove tab" Click="ContextMenuRemoveTab_Click">
-                <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/removetab.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="RemoveAddTabContextMenu">
+        <ContextMenu x:Key="OnTabContextMenu">
             <MenuItem Header="Add tab" Click="ContextMenuAddTab_Click">
                 <MenuItem.Icon>
                     <Image Source="pack://application:,,,/Images/addtab.png"/>
@@ -37,22 +23,13 @@
                     <Image Source="pack://application:,,,/Images/removetab.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="AddActionButtonContextMenu">
-            <MenuItem Header="Add button" Click="ContextMenuAddActionButton_Click">
+            <MenuItem Header="Rename tab" Click="ContextMenuRenameTab_Click">
                 <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/addbutton.png"/>
+                    <Image Source="pack://application:,,,/Images/renametab.png"/>
                 </MenuItem.Icon>
             </MenuItem>
         </ContextMenu>
-        <ContextMenu x:Key="ReorderActionButtonsContextMenu">
-            <MenuItem Header="Reorder buttons" Click="ContextMenuReorderActionButtons_Click">
-                <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/reorderbuttons.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="AddReorderActionButtonsContextMenu">
+        <ContextMenu x:Key="OnActionButtonPannelContextMenu">
             <MenuItem Header="Add button" Click="ContextMenuAddActionButton_Click">
                 <MenuItem.Icon>
                     <Image Source="pack://application:,,,/Images/addbutton.png"/>
@@ -64,29 +41,15 @@
                 </MenuItem.Icon>
             </MenuItem>
         </ContextMenu>
-        <ContextMenu x:Key="RemoveActionButtonContextMenu">
-            <MenuItem Header="Remove button" Click="ContextMenuRemoveActionButton_Click">
-                <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/removebutton.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="EditActionButtonContextMenu">
+        <ContextMenu x:Key="OnActionButtonContextMenu">
             <MenuItem Header="Edit button" Click="ContextMenuEditActionButton_Click">
                 <MenuItem.Icon>
                     <Image Source="pack://application:,,,/Images/editbutton.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-        </ContextMenu>
-        <ContextMenu x:Key="RemoveEditActionButtonContextMenu">
             <MenuItem Header="Remove button" Click="ContextMenuRemoveActionButton_Click">
                 <MenuItem.Icon>
                     <Image Source="pack://application:,,,/Images/removebutton.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-            <MenuItem Header="Edit button" Click="ContextMenuEditActionButton_Click">
-                <MenuItem.Icon>
-                    <Image Source="pack://application:,,,/Images/editbutton.png"/>
                 </MenuItem.Icon>
             </MenuItem>
         </ContextMenu>
@@ -180,7 +143,7 @@
         <TabControl x:Name="MainTab" Grid.Row="1">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <Label Content="{Binding TabHeader}" Name="TabHeaderSelector" PreviewMouseDown="TabHeaderSelector_PreviewMouseDown"/>
+                    <Label Content="{Binding TabHeader}" Name="TabHeaderSelector" PreviewMouseDown="OnTabHeader_PreviewMouseDown"/>
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
@@ -192,7 +155,7 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <ScrollViewer x:Name="MainScroll" Grid.Row="0" Background="#F7F7F7" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" PreviewMouseDown="ActionButtonAdd_PreviewMouseDown">
+                        <ScrollViewer x:Name="MainScroll" Grid.Row="0" Background="#F7F7F7" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" PreviewMouseDown="OnActionButtonPannel_PreviewMouseDown">
                             <ItemsControl ItemsSource="{Binding TabActionButtons}" Margin="8">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
