--- a/EasyJob/Windows/AnswerDialog.xaml
+++ b/EasyJob/Windows/AnswerDialog.xaml
@@ -33,7 +33,7 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-        <Button Grid.Row="1" Content="OK" Click="OKButton_Click" Margin="5" Padding="5" HorizontalAlignment="Right"/>
         <Button Grid.Row="1" Content="Cancel" Click="CANCELButton_Click" Margin="5,5,40,5" Padding="5" HorizontalAlignment="Right"/>
+        <Button Grid.Row="1" Content="OK" Click="OKButton_Click" Margin="5" Padding="5" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
