--- a/EasyJob/Windows/HelpDialog.xaml
+++ b/EasyJob/Windows/HelpDialog.xaml
@@ -26,14 +26,19 @@
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Name="HelpDescription" Padding="0,8,0,8" TextWrapping="Wrap" FontStyle="Italic"/>
                 <MediaElement Grid.Row="1" Name="HelpVideo" LoadedBehavior="Manual"/>
-                <Button Grid.Row="1" Margin="5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="ReloadVideoButton_Click">
+                <Button Grid.Row="1" Margin="5,5,55,5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="PlayVideoButton_Click">
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Background="Transparent">
-                        <Image Source="pack://application:,,,/Images/reload.png" Margin="-8,-4,-8,-4" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Image Source="pack://application:,,,/Images/play.png" Margin="-6,-2,-6,-2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
                 <Button Grid.Row="1" Margin="5,5,30,5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="StopVideoButton_Click">
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Background="Transparent">
                         <Image Source="pack://application:,,,/Images/stop.png" Margin="-6,-2,-6,-2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </Button>
+                <Button Grid.Row="1" Margin="5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="ReloadVideoButton_Click">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Background="Transparent">
+                        <Image Source="pack://application:,,,/Images/reload.png" Margin="-8,-4,-8,-4" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
             </Grid>
